# host

./: Caddyfile  Cargo.toml  Cross.toml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/deploy/: mod.rs
cli/src/site/: mod.rs
example/: hosting.toml
example/docusaurus/: hosting.toml
example/hugo/: config.toml  hosting.toml
example/react/: hosting.toml
example/react/src/: App.js  Lazy.js
server/: Cargo.toml  Rocket.toml  Vulpo.toml  sqlx-data.json
server/migrations/: 20210320202550_create_sites.down.sql
server/migrations/00000000000000_diesel_initial_setup/: up.sql
server/migrations/2021-03-20-202550_create_sites/: up.sql
server/migrations/2021-03-20-203045_create_branches/: down.sql  up.sql
server/migrations/2021-03-20-203530_create_deployments/: down.sql  up.sql
server/migrations/2021-03-20-203902_create_files/: down.sql  up.sql
server/src/: auth.rs  cors.rs  db.rs  error.rs  lib.rs  main.rs  server.rs
server/src/branch/: create.rs  data.rs  delete.rs  get.rs  list.rs  mod.rs  set_version.rs  set_visibility.rs  update.rs
server/src/config/: mod.rs
server/src/deployment/: abort.rs  complete.rs  create.rs  data.rs  delete.rs  get.rs  list.rs  mod.rs
server/src/file/: data.rs  get.rs  mod.rs  upload.rs
server/src/serve/: mod.rs  serve.rs
server/src/site/: create.rs  data.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
