[package]
name = "vulpo_host"
version = "0.1.0"
authors = ["Michael Riezler <michaelriezler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
tokio = { version = "1.4.0", features = ["full"] }
reqwest = { version = "0.11.2", features = ["json"] }
server = { path = "../server" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
slug = "0.1.4"
walkdir = "2"
path-slash = "0.1.4"
figment = { version = "0.10.3", features= ["env"] }
globset = "0.4.6"
dotenv = "0.15.0"
