[package]
name = "server"
version = "0.1.0"
authors = ["Michael Riezler <michaelriezler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
include_dir = "0.6.0"
clap = "3.0.0-beta.2"
jsonwebtoken = "7.2.0"
diesel_migrations = "1.4.0"
diesel = { version = "1.4.4", features = ["postgres"] }
chrono = { version = "0.4.19", features = ["serde"] }
figment = { version = "0.10.3", features= ["env"] }
reqwest = { version = "0.11.2", features = ["json"] }
slug = "0.1.4"
serde_plain = "0.3.0"
path-slash = "0.1.4"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch="master"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"json"
]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["uuid"]

[lib]
path = "src/lib.rs"