[package]
name = "server"
version = "0.1.0"
authors = ["Michael Riezler <michaelriezler@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
include_dir = "0.6.0"
clap = "4.0.0-rc.2"
jsonwebtoken = "7.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
figment = { version = "0.10.3", features= ["env"] }
reqwest = { version = "0.11.2", features = ["json"] }
slug = "0.1.4"
serde_plain = "0.3.0"
path-slash = "0.1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.17.3"
log = "0.4.17"
thiserror = "1.0.31"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-otlp = "0.10"
werkbank = { version = "0.1.0" }
futures = "0.3.24"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["uuid", "json"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"json",
	"migrate",
	"offline",
]
